tests/errors/type_mismatch1.f90
program type_mismatch1
implicit none
integer :: x
x = "x"
end program
